...
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="56.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vf0-ss-qwq">
                                                    <rect key="frame" x="15" y="6.5" width="345" height="43"/>
                                                    <color key="backgroundColor" red="0.2391854823" green="0.23923307660000001" blue="0.2391824722" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="viewcreditsBtn" label="View the credits button"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="43" id="mur-oA-Eix"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" weight="thin" pointSize="18"/>
                                                    <state key="normal" title="View Credits">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                            <outlet property="infoImage" destination="cl7-Tw-KsV" id="NCS-ah-kIw"/>
                                            <outlet property="minsPicker" destination="yJ0-bZ-nwI" id="Er8-YL-TvD"/>
                                            <outlet property="secondsPicker" destination="qor-ze-shH" id="D20-V5-Vkb"/>
                                            <outlet property="selectedValue" destination="TPh-EC-fd2" id="Ykh-kI-91q"/>
                                        </connections>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="selectCell" rowHeight="280" id="Bsf-F9-nkv" userLabel="selectCell" customClass="SelectCell" customModule="ruckus" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="479" width="375" height="280"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Bsf-F9-nkv" id="jNx-A2-ULJ">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="279.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
...
                                                    <fontDescription key="fontDescription" type="system" weight="thin" pointSize="18"/>
                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="deviceRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0:30" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dmz-0m-AaN" userLabel="Label for the
                                                    <rect key="frame" x="298" y="17" width="38" height="22"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="currentValPicker" label="current value for standard picker"/>
                                                    <fontDescription key="fontDescription" type="system" weight="thin" pointSize="18"/>
                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <pickerView tag="3" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mIF-F1-wMy" userLabel="picker">
                                                    <rect key="frame" x="10" y="63" width="355" height="216"/>
...
                                                        <constraint firstAttribute="height" constant="22" id="X5O-hg-VF1"/>
                                                        <constraint firstAttribute="width" constant="12" id="gIk-bj-EMZ"/>
                                                    </constraints>
                                                </imageView>
                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="info" translatesAutoresizingMaskIntoConstraints="NO" id="tpn-dO-ROY">
                                                    <rect key="frame" x="10" y="13" width="29" height="29"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="infoIcon" label="info icon">
                                                        <bool key="isElement" value="YES"/>
                                                    </accessibility>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="29" id="6EN-Xo-udF"/>
                                                        <constraint firstAttribute="height" constant="29" id="aWd-Cd-dJi"/>
                                                    </constraints>
...
            <point key="canvasLocation" x="-1175" y="1691"/>
        </scene>
        <!--Settings-->
        <scene sceneID="7df-f2-XDz">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="MM0-Yh-bD1" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Settings" image="settings" id="cPa-gy-q4n"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="Vj3-fy-db1">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="tintColor" red="0.22523248200000001" green="0.64600467679999996" blue="0.53191149230000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </navigationBar>
...
