...
            return "Difficulty"
        case 3:
            return "Volume"
        case 4:
            return "AR Settings"
        case 5:
            return "Credits"
        default:
            return ""
        }
    }
    
    func tableView(_ tableView: UITableView, willDisplayHeaderView view: UIView, forSection section: Int) {
...
    func selectStateKey(forPath indexPath: IndexPath) -> String {
        return "r\(indexPath.row):s\(indexPath.section)"
    }
    
    func showAlert(_ descr: String) {
        let alert = UIAlertController(title: nil, message: descr, preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "Ok", style: .default, handler: nil))
        
        self.present(alert, animated: true, completion: nil)
    }
    
    func disableRetaledToggles(forKey cellKey: PossibleSetting, currentState isOn: Bool) {
        if let data = tableData[cellKey.rawValue], let disables = data["disables"] as? [String] {
...
